--- a/practise/practise.html
+++ b/practise/practise.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetu
-        r adipisicing elit. Odit esse incidunt quaerat nisi ab.
-         Minus aspernatur sed vel laborum expedita.</h1>
+    <h1>i am sahil garg</h1>
+    <h1>i also belongs from raj</h1>
+    <h1>i am softwaew enggg</h1>
+    <h1>i also belongs</h1>
+    <h1>i am softwaew </h1>
 </body>
 </html>
