--- a/assesment1_2/assesment1.html
+++ b/assesment1_2/assesment1.html
@@ -74,7 +74,7 @@
          <li>closed service</li>      
      </ul>
 
-     <a href="INDEX.HTML">Go Back</a>
+     <a href="./assesment_1.HTML">Go Back</a>
      
 
 
