--- a/assesment1_2/assesment_1.HTML
+++ b/assesment1_2/assesment_1.HTML
@@ -13,7 +13,7 @@
 
     <a href="https://www.prepbytes.com/login">Link to a website opening in same page</a> <br><br>
 
-    <a href="./link.html">link to internal file</a>
+    <a href="./assesment1.html">link to internal file</a>
     <p><b> kept inside the folder</b></p>
     <img src="./ms.png"> <br>
     <p><b>uploaded image</b></p>
@@ -21,7 +21,7 @@
     uWH6TbyxfaQV8CnkvkyPf1O7rf9MSuKcGfH/e0++T2ly7nrF06hPxO/ohW7OFSQAAAAAElFTkSuQmCC"><hr>
     <h1>List</h1>
     
-    <a href="link.html">Click here</a>
+    <a href="./assesment1.html">Click here</a>
     
 </body>
 </html>
