--- a/assesment1_2/video.html
+++ b/assesment1_2/video.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hi garg here</h1>
+    <video src="https://youtu.be/ynlPBwNJW1U" controls autoplay loop ></video>
 </body>
 </html>
