--- a/assesment3/index.html
+++ b/assesment3/index.html
@@ -43,7 +43,7 @@
        <option value="BACK END">BACKEND</option>
        <option value="FULLSTACK">FULLSTACK</option>
     </select>  <br>
-    <textarea name="" iclos="90" rows="10"></textarea> <br>
+    <textarea name="" cols="40" rows="10"></textarea> <br>
     <label for="phone">PHONE</label> 
     <input type="number" name= "my phone no" id=phone> 
     <label for="submit" ></label>
