--- a/assesment1_2/assesment_2.html
+++ b/assesment1_2/assesment_2.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>forms</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetu
-        r adipisicing elit. Odit esse incidunt quaerat nisi ab.
-         Minus aspernatur sed vel laborum expedita.</h1>
+    <iframe width = "500" height="500px" src="./Assesment_1.HTML" frameborder="1"></iframe>
+    <a href="video.html">click here to see the video</a>
 </body>
 </html>
