--- a/assesment_2/index.html
+++ b/assesment_2/index.html
@@ -7,7 +7,7 @@
     <title>forms</title>
 </head>
 <body>
-    <iframe width = "500" height="500px" src="./assesment_1.html" frameborder="1"></iframe>
+    <iframe width = "500" height="500px" src="./asses1.html" frameborder="1"></iframe>
     <a href="video.html">click here to see the video</a>
 
 </body>
