--- a/assesment_2/list.html
+++ b/assesment_2/list.html
@@ -74,7 +74,7 @@
          <li>closed service</li>      
      </ul>
 
-     <a href="./assesment_1.HTML">Go Back</a>
+     <a href="./asses1.html">Go Back</a>
      
 
 
